@@ -1,3 +1,9 @@
+- xorg config:
+  o rely on evdev/udev for input devices
+  o Wacom tablets should work better
+    (we now load the wacom driver again)
+  o Synaptics touchpads should now work during install (mga#11524)
+
 Version 16.30 - 4 June 2014
 
 - locale setting
